--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="../lib/d3v4/d3.min.js"></script>
     <style>
         #chart { 
-            background: #eee;
+/*            background: #eee;*/
             margin-left: auto;
             margin-right: auto;
         }
@@ -32,7 +32,7 @@
         height = 480,
         padding = 20;
     
-    var gradeBuckets = 1200, 
+    var gradeBuckets = 1000, 
         colCount = 0,
         rowCount = 0,
         colLimit = 15,
