Just doing stuff

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
                 Laura Grant & Alastair Otter
             </div>
 
-            <p>In January every year millions of children enter grade one, the start of an expected 12 years of primary and
-                secondary schooling. In an ideal world the majority of these children will emerge with a matric certificate
-                12 years later. Unfortunately this is far from the reality in South Africa's school system.</p>
+            <p>This is a story about South Africa’s schoolchildren. The ones who started school in 2005 when they enrolled in grade one in one of the thousands of government schools around the country. In an ideal world, the majority of these children would have emerged at the end of 2016, after 12 years of schooling, with a national senior certificate (what used to be known as a matric). Unfortunately, this is far from the reality in South Africa's school system.</p>
+            <p>
+                    In January 2005  <span class="em">1.2 million</span> children started grade one in South Africa’s government schools. Each of the circles below represents 2,500 pupils.</p>
 
+            <div class="clear"></div>
         </div>
 
         <div id="slide-two" class="slide">
             <div class="slide-inner">
-                <p>
-                    In January 2005
-                    <span class="em">1.2 million</span> children started grade one. Each of the circles below represents 2,500 learners that started grade one in 2005.</p>
+                <!-- <p>
+                    In January 2005  <span class="em">1.2 million</span> children started grade one in South Africa’s government schools. Each of the circles below represents 2,500 pupils.</p> -->
             </div>
 
         </div>
@@ -54,19 +54,27 @@
         <div id="slide-four" class="slide">
 
             <div class="slide-inner">
-                Over the next seven years of primary school that number drops from 1.2 million to 910,994. That's
-                <span class="em">297,002</span> fewer pupils in Grade Seven than started Grade One in 2005.
+                    Six years later, in 2011, those children should have been in their last year of primary school, grade seven. But <span class="em">one out of every five</span> children who started in 2005 didn’t make it to grade seven. In 2011, <span class="em">910,994</span> pupils were enrolled in grade 7. That's <span class="em">297,002 fewer</span> pupils in grade seven than started grade one in 2005. 
+                
             </div>
+        </div>
+
+        <div id="slide-four-two" class="slide">
+                <div class="slide-inner">
+        <p>A high number of learners have to repeat grades in South Africa. Research has shown that about <span class="em">one in three</span> children in SA had to repeat a grade at school. Grade repetition gets worse in the higher grades. The grades with the highest percentage of repeaters are grades 9, 10 and 11.</p>
+
+            </div>
+            <div class="clear"></div>
         </div>
 
         <div id="slide-five" class="slide">
             <div class="slide-inner">
-                From Grade 8 to 10 this trend reverses rapidly and by Grade 10 there are
-                <span class="em">1,100,877</span> pupils. After Grade 10 the numbes decline rapidly. By Grade 12 there are just
-                <span class="em">665,355</span> learners, just
-                <span class="em">55%</span> of the number of learners that started Grade 1 12 years earlier.
+                    <p>When those kids from the grade one class of 2005 started high school (grade 8) in 2012, their ranks were swollen by an extra <span class="em">23,500 learners</span> who were most likely repeaters – children who had failed grade eight the previous year and had to repeat it. </p>
             </div>
+            <div class="clear"></div>
         </div>
+
+       
 
         <div id="slide-six" class="slide">
             <div class="slide-inner">
