--- a/index.html
+++ b/index.html
@@ -88,28 +88,34 @@
 
        
 
-        <div id="slide-six" class="slide step" data-step="slide6">
+        <div id="slide-five-three" class="slide step" data-step="slide5-3">
             <div class="slide-inner">
                     By the time our 2005 grade ones reached grade 10 there were 1,1-million pupils in their grade. At least another 100,000 repeaters join them grade nine, and an additional 64,000 in grade 10. Research has shown that <span class="em">just over half</span> of the learners in South Africa’s schools had <span class="em">repeated at least one grade</span> by the time they reached grades 10 to 12. <span class="em">One in 10</span> of them has repeated a grade at least <span class="em">three times</span>.
             </div>
         </div>
 
-        <div id="slide-seven" class="slide step" data-step="slide7">
+        <div id="slide-six" class="slide step" data-step="slide6">
             <div class="slide-inner">
                     After grade 10 the numbers drop rapidly. By Grade 12 there were just <span class="em">665,355 learners</span>, which means that at least half the class of 2005 didn’t make it to grade 12 within 12 years.
             </div>
         </div>
 
-        <div id="slide-eight" class="slide step" data-step="slide8">
+        <div id="slide-seven" class="slide step" data-step="slide7">
             <div class="slide-inner">
-                Slide 8: Pupils with a university pass.
+                And of those who did make it, one in every three will fail their national senior certificate exams.
             </div>
         </div>
 
 
-        <div id="slide-nine" class="slide step" data-step="slide9">
+        <div id="slide-8" class="slide step" data-step="slide8">
             <div class="slide-inner">
-                Slide 9: Summary.
+                And only one in every four who wrote the grade 12 exams got a university pass.
+            </div>
+        </div>
+
+        <div id="slide-9" class="slide step" data-step="slide9">
+            <div class="slide-inner">
+                
             </div>
         </div>
 
