--- a/index.html
+++ b/index.html
@@ -140,6 +140,20 @@
             </div>
         </div>
 
+        <div id="slide-13" class="slide step" data-step="slide13">
+            <div class="slide-inner">
+                 Two out of three people with a matric certificate or another type of post-school qualification have a job.
+                 
+            </div>
+        </div>
+
+        <div id="slide-14" class="slide step" data-step="slide14">
+            <div class="slide-inner">
+                But people who didn’t get their matric certificate are likely to find it much harder to get a job. Nearly 45% of 15 to 34 year-olds without a matric are unemployed, says StatsSA. That’s two in every five people.
+                 
+            </div>
+        </div>
+
     </div> <!-- #SLIDES -->
 
     <div id="chart">
@@ -147,6 +161,7 @@
     </div>
 
     <script src="lib/d3v4/d3.min.js"></script>
+    <script src="lib/d3-selection-multi.min.js"></script>
     <script src="lib/jquery-3.2.1.min.js"></script>
     <!-- <script src="lib/waypoints/jquery.waypoints.min.js"></script> -->
     <script src="lib/scrollama.min.js"></script>
