Replacing old employment breakdown

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
         </div>
 
-        <!-- <div id="slide-three" class="slide step" data-step="slide3">
+        <div id="slide-three" class="slide step" data-step="slide3">
             <div class="slide-inner">
                 In 2005, <span class="em">1.2 million</span> children started Grade 1, the start of their school careers.
             </div>
 
-        </div> -->
+        </div>
 
-        <!-- <div id="slide-four" class="slide step" data-step="slide4">
+        <div id="slide-four" class="slide step" data-step="slide4">
 
             <div class="slide-inner">
                     Six years later, in 2011, those children should have been in their last year of primary school, grade seven. But <span class="em">one out of every five</span> children who started in 2005 didn’t make it to grade seven. In 2011, <span class="em">910,994</span> pupils were enrolled in grade 7. That's <span class="em">297,002 fewer</span> pupils in grade seven than started grade one in 2005. 
@@ -111,15 +111,15 @@
             <div class="slide-inner">
                 And only one in every four who wrote the grade 12 exams got a university pass.
             </div>
-        </div> -->
+        </div>
 
-        <!-- <div id="slide-9" class="slide step" data-step="slide9">
+        <div id="slide-9" class="slide step" data-step="slide9">
             <div class="slide-inner">
                  
             </div>
         </div>
 
-        <div id="slide-10" class="slide step" data-step="slide10">
+        <!-- <div id="slide-10" class="slide step" data-step="slide10">
             <div class="slide-inner">
                 A university pass substantially increases a person’s chances of finding a job. 
                  
