--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
             </div>
         </div>
 
-        <div id="slide-9" class="slide step" data-step="slide9">
+        <!-- <div id="slide-9" class="slide step" data-step="slide9">
             <div class="slide-inner">
                  
             </div>
-        </div>
+        </div> -->
 
         <!-- <div id="slide-10" class="slide step" data-step="slide10">
             <div class="slide-inner">
