--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
            <div style="clear: both;"></div>
         </div>
 
-        <!-- <div id="slide-two" class="slide step" data-step="slide2">
+        <div id="slide-two" class="slide step" data-step="slide2">
             <div class="slide-inner">
                
             </div>
@@ -110,7 +110,7 @@
             <div class="slide-inner">
                 And only one in every four who wrote the grade 12 exams got a university pass.
             </div>
-        </div> -->
+        </div>
 
 
 
@@ -179,7 +179,7 @@
         </div>
         <div id="slide-18" class="slide step" data-step="slide18">
             <div class="slide-inner">
-                Passing matric and even getting into university is not a guarantee of success in life but achieving those does improve school leavers' chances of being employed. While failing to reach grade 12, or failing grade 12 increases the liklihood of unemployment. 
+                Passing matric and even getting into university is not a guarantee of success in life but achieving those does improve school leavers' chances of being employed. While failing to reach grade 12, or failing grade 12 increases the likelihood of unemployment. 
                  
             </div>
         </div>
