Labels for final section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="slide-title">Twelve years in South Africa's schools</div>
 
             <div class="bylines">
-                Laura Grant & Alastair Otter
+                <a href="http://twitter.com/laurajgrant">Laura Grant</a> & <a href="http://twitter.com/alastairotter">Alastair Otter</a>
             </div>
 <div>
             <p>This is a story about South Africa’s schoolchildren. The ones who started school in 2005 when they enrolled in grade one in one of the thousands of government schools around the country. In an ideal world, the majority of these children would have emerged at the end of 2016, after 12 years of schooling, with a national senior certificate (what used to be known as a matric). Unfortunately, this is far from the reality in South Africa's school system.</p>
@@ -50,7 +50,7 @@
 
         </div>
 
-        <div id="slide-three" class="slide step" data-step="slide3">
+        <!-- <div id="slide-three" class="slide step" data-step="slide3">
             <div class="slide-inner">
                 In 2005, <span class="em">1.2 million</span> children started Grade 1, the start of their school careers.
             </div>
@@ -110,7 +110,7 @@
             <div class="slide-inner">
                 And only one in every four who wrote the grade 12 exams got a university pass.
             </div>
-        </div>
+        </div> -->
 
 
 
@@ -156,6 +156,7 @@
             </div>
         </div> -->
 
+     
         <div id="slide-15" class="slide step" data-step="slide15">
             <div class="slide-inner">
                Looking at it another way: imagine the 1.2 million pupils that started grade 1 in 2005 are represented by these 100 points.
