--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         </div>
 
-        <!-- <div id="slide-three" class="slide step" data-step="slide3">
+        <div id="slide-three" class="slide step" data-step="slide3">
             <div class="slide-inner">
                 In 2005, <span class="em">1.2 million</span> children started Grade 1, the start of their school careers.
             </div>
@@ -110,7 +110,7 @@
             <div class="slide-inner">
                 And only one in every four who wrote the grade 12 exams got a university pass.
             </div>
-        </div> -->
+        </div>
 
 
 
