Adding labels to end

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="tooltip"></div>
     <div class="loading">
             
             <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
@@ -36,14 +37,16 @@
             </div>
 <div>
             <p>This is a story about South Africa’s schoolchildren, specifically the ones who enrolled in grade one in 2005 in one of the thousands of public schools around the country. In an ideal world, the majority of those children would have emerged at the end of 2016, after 12 years of schooling, with a national senior certificate (what used to be known as a matric). But this is far from the reality.</p>
-            <p>
-                    Each of the circles below represents 2,500 pupils.</p>
+            <p class="desktop">
+                    Each of the circles below represents 3,000 pupils.</p>
+            <p class="mobile">
+                    Each of the circles below represents 7,000 pupils.</p>
                     </div>
 
            <div style="clear: both;"></div>
         </div>
 
-        <div id="slide-two" class="slide step" data-step="slide2">
+        <!-- <div id="slide-two" class="slide step" data-step="slide2">
             <div class="slide-inner">
                
             </div>
@@ -110,7 +113,7 @@
             <div class="slide-inner">
                 And only one in every four who wrote the grade 12 exams got a university pass. 
             </div>
-        </div>
+        </div> -->
 
 
 
