--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
            <div style="clear: both;"></div>
         </div>
 
-        <!-- <div id="slide-two" class="slide step" data-step="slide2">
+        <div id="slide-two" class="slide step" data-step="slide2">
             <div class="slide-inner">
                
             </div>
@@ -113,7 +113,7 @@
             <div class="slide-inner">
                 And only one in every four who wrote the grade 12 exams got a university pass. 
             </div>
-        </div> -->
+        </div>
 
 
 
