--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="tooltip"></div>
+    <!-- <div class="tooltip"></div> -->
     <div class="loading">
             
             <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
