--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
         </div>
 
 
-        <div id="slide-21" class="slide step" data-step="slide21">
+        <!-- <div id="slide-21" class="slide step" data-step="slide21">
             <div class="slide-inner">
                 If you found this useful, interesting or informative please share it with your family friends and colleagues. 
 
                 If you didn't please let us know wny. 
                  
             </div>
-        </div>
+        </div> -->
 
     </div> <!-- #SLIDES -->
 
