--- a/index.html
+++ b/index.html
@@ -188,11 +188,7 @@
   <i class="fa fa-twitter-square" aria-hidden="true"></i></a>
   <br />
   Or follow us on Twitter and Facebook for more stories like this: <br />
-  <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fpassmark.org.za%2Fschools%2F" class="facebook" target="_blank" rel="noopener"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>&nbsp;
-
-    <a class="twitter-share-button twitter" target="_new"
-  href="https://twitter.com/intent/tweet?text=SA%20school%20reality%3A%20Half%20of%20SA%27s%20pupils%20more%20than%2012%20years%20to%20complete%20their%20schooling%2C%20many%20never%20finish%20grade%2012%2C%20and%20very%20few%20move%20on%20to%20tertiary%20education%2C%20which%20affects%20their%20job%20opportunities.%20http%3A%2F%2Fpassmark.org.za%2Fschools%2F%20via%20%40passmarkza">
-  <i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+  <a href="https://www.facebook.com/passmarkza/" class="pmsocial"><i class="fa fa-facebook-square" aria-hidden="true"></i></a> <a href="https://twitter.com/passmarkza" class="pmsocial"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
 
                 <div class="credits">
                     Research & Data: <a href="http://twitter.com/laurajgrant">Laura Grant</a><br />
